examples/tests/invalid/resource_access_field_as_method.w
class SomeResource {
    name: str;
    init() {
        this.name = "John Doe";
    }
}

let x = new SomeResource();
x.name();